<resources>
    <string name="app_name">PronuntiApp</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="phone_hint">Phone</string>
    <string name="address_hint">Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="not_register">Are you a Speech Therapist and don\'t have an account? <b>Register</b></string>
    <string name="already_registered">Already have an account? <b>Login</b></string>
    <string name="login">Sign in</string>
    <string name="accesso_rapido">Quick Access</string>
    <string name="subtitle_registration">Welcome Doctor!\nEnter your data to start using the application</string>
    <string name="subtitle_registration_patient_parent">Hello Doctor.\nEnter here data of your new patient</string>
    <string name="modify_profile"> Edit profile </string>
    <string name="confirm_modify_profile"> Confirm edit profile</string>
    <string name="birth_date_hint">Birth date</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="age">Age</string>
    <string name="information_patient">Patient information</string>
    <string name="information_parent">Parent information</string>
    <string-array name="sesso_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="gender_hint">Sex</string>
    <string name="patient">Patient</string>
    <string name="parent">Parent</string>
    <string name="logopedist">Speech terapist</string>
    <string name="child_data">Child data</string>
    <string name="actualSelectedCharacter"><b>SELECTED</b></string>
    <string name="notSelectedCharacter">SELECT</string>
    <string name="startDate">Start date teraphy</string>
    <string name="endDate">End date teraphy</string>
    <string name="id">Id</string>
    <string name="next">Avanti</string>
    <string name="errorConnectionDescription">Internet connection is not available. Check your connection, you can\'t use the App without Internet connection</string>
    <string name="errorConnectionTitle">Connection error</string>
    <string name="restartApp" >Restart the app</string>
    <string name="errorPermissionTitle">Permissions denied</string>
    <string name="errorPermissionOption1">Request them again</string>
    <string name="errorPermissionOption2">I don\'t want to give them</string>
    <string name="confirm">Confirm</string>
    <string name="confermato">confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="infoTitle">Attention</string>
    <string name="startRecording">Start Recording</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="CheckAnswer">Check</string>
    <string name="StartAnswer">Start Answer</string>
    <string name="StopAnswer">Stop Answer</string>
    <string name="getHelp">Click here for help!</string>
    <string name="aiutiUtilizzati">Aid used: </string>
    <string name="rispostaData">Answer given</string>
    <string name="showHelp">Click for help!</string>
    <string name="suggestEsercizioDenominazione">Click on the microphone and pronounce the element in the image!</string>
    <string name="checkAnswer">Check</string>
    <string name="micDenominazioneImmagine">Click to respond!</string>
    <string name="corretto">Correct!</string>
    <string name="complimentiTerminatoScenario">Congratulation!\nYou\'ve finished all games in this date!</string>
    <string name="sbagliato">Wrong!</string>
    <string name="aidRemaining"> aid remaning </string>
    <string name="noAidRemaining">No aid remaning!</string>
    <string name="recordBeforeCheck">Record before the answer!</string>
    <string name="ascoltaPrima">Before listen the audio then try to repeat!</string>
    <string name="noWordsReconized">No word reconized!</string>
    <string name="overwriteAudio"> Overwrite audio?</string>
    <string name="overwriteAudioDescription">Are you sure that you would overwrite the audio?</string>
    <string name="startedRecording">Recording started</string>
    <string name="stopedRecording">Recording stopped</string>
    <string name="suggestEsercizioCoppiaImmagini">Play the audio before answering!</string>
    <string name="titleEsercizioCoppiaImmagini">What image are you ear?</string>
    <string name="titleEsercizioSequenzaParole">What is audio say?\nTry to repeat!</string>
    <string name="suggestionSequenzaParole">Reproduce the audio with bottom left button, then record the same phrase! </string>
    <string name="titleEsercizioDenominazioneImmagine">What is in the image?</string>
    <string name="lastTherapy">This is the last therapy, you can only see following therapies (or there are no therapies)</string>
    <string name="firstTherapy">This is the first therapy, you can only see previous therapies (or there are no therapies)</string>
    <string name="subTitleLogin">Welcome back!\nEnter your credentials to access the application</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="insertPaziente" >Insert patient</string>
    <string name="insertDate" >Start date must be on or after than end date</string>
    <string name="navScenariNoticeBackward" >It seems that there are no other exercises in this therapy, try to see the next ones.</string>
    <string name="navScenariNoticeForward" >It seems that there are no other exercises in this therapy, try to see the previous ones.</string>
    <string name="ok" >OK</string>
    <string name="checkDate" >It is not possible to enter the therapy and related scenarios on these dates, because another therapy is already planned for the patient in the selected period.</string>
    <string-array name="character_names">
        <item>Girl</item>
        <item>Boy</item>
        <item>Girl Drawing</item>
        <item>Thoughtful Boy</item>
        <item>Soldier Boy</item>
        <item>Boy with Backpack</item>
        <item>Batman</item>
        <item>Boy Knight</item>
        <item>Dog</item>
        <item>Blue Dragon</item>
        <item>Female Dragon</item>
        <item>Elephant</item>
        <item>Cat</item>
        <item>Kitten</item>
        <item>Girl Knight</item>
        <item>Lion</item>
        <item>Mini Captain America</item>
        <item>Cow</item>
        <item>Sheep</item>
        <item>Spiderman</item>
        <item>Wonder Woman</item>
    </string-array>
    <string-array name="character_costs">
        <item>50</item>   
        <item>60</item>   
        <item>75</item>   
        <item>70</item>   
        <item>80</item>   
        <item>90</item>   
        <item>120</item>  
        <item>100</item>  
        <item>40</item>   
        <item>110</item>  
        <item>130</item>  
        <item>85</item>   
        <item>45</item>   
        <item>30</item>   
        <item>105</item>  
        <item>95</item>   
        <item>150</item>  
        <item>55</item>   
        <item>65</item>   
        <item>140</item>  
        <item>145</item>  
    </string-array>
    <string name="erroreLoginCredenziali">Missing or incorrect credentials</string>
    <string name="tastoRiprova">Try Again</string>
    <string name="erroreRegistrazioneLogopedistaCampiIncompleti">Missing or incomplete fields</string>
    <string name="erroreRegistrazioneLogopedistaPasswordDifformi">Password and Confirm Password do not match</string>
    <string name="erroreRegistrazioneLogopedistaAutenticazione">Error in Database; probably the email is already in use. Also check if the email is in the correct format</string>
    <string name="erroreRegistrazionePazienteCampiMancanti">Missing or incomplete fields (Child)</string>
    <string name="erroreRegistrazionePazientePasswordDifformi">Password and Confirm Password do not match (Child)</string>
    <string name="erroreRegistrazionePazienteEtaNonValida">Invalid Age</string>
    <string name="erroreRegistrazionePazienteDataNonValida">Invalid Date</string>
    <string name="erroreRegistrazionePazienteSessoNonValido">Invalid Sex value</string>
    <string name="erroreRegistrazioneGenitoreCampiMancanti">Missing or incomplete fields (Parent)</string>
    <string name="erroreRegistrazioneGenitorePasswordDifformi">Password and Confirm Password do not match (Parent)</string>
    <string name="erroreRegistrazionePazienteAutenticazione">Error in Database; probably the child (patient) email is already in use. Also check if the email is in the correct format</string>
    <string name="erroreRegistrazioneGenitoreAutenticazione">Error in Database; probably the parent email is already in use. Also check if the email is in the correct format</string>
    <string name="erroreCreazioneTerapiaCampiIncompleti">Missing or incomplete fields</string>
    <string name="erroreCreazioneTerapiaDataNonValida">Invalid Date</string>
    <string name="erroreCreazioneTerapiaOrdineDateNonValido">Invalid Date Order</string>
    <string name="addPatient">Patient +</string>
    <string name="addTerapia">Therapy +</string>
    <string name="sex">Sex</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="nameSurname">Name and Surname</string>
    <string name="i_tuoi_appuntamenti">Your appointments</string>
    <string name="ricerca_appuntamento">Research appointments...</string>
    <string name="nuovo_appuntamento">New appointments +</string>
    <string name="nuovo_appuntamento_titolo">New appointments</string>
    <string name="rimuovi_appuntamento">Remove</string>
    <string name="closeApp">Press back again to exit</string>
    <string name="registraPaziente">Register Patient</string>
    <string name="avvioRapido">Quick accces</string>
    <string name="registrazione">Registration</string>
    <string name="registrazionePaziente">Patient and parent registration</string>
    <string name="iTuoiPazienti">Your patients</string>
    <string name="tuoProfilo">Your profile</string>
    <string name="classifica">Ranking</string>
    <string name="giochiBambini">Game of your children</string>
    <string name="monitoraggio">Therapies of your childer </string>
    <string name="gioco">Game</string>
    <string name="personaggi">Characters</string>
    <string name="logoutTitle">Logout?</string>
    <string name="logoutRichiesta">Are you sure you want to logout PronuntiApp? If you do, then you will have to login again when you will use the app</string>
    <string name="permissionDeniedDescription">This App\'s functionality requires to use your Microphone, please concede the Permission if you want to be able to play</string>
    <string name="infoOk">Ok</string>
    <string name="permissionDeniedInstructions">This functionality requires permissions to use the microphone. If you don\'t see the messagge to concede the permissions, you have to autorize from the system settings relative to the App</string>
    <string name="inputErratoAggiungiAppuntamento">Probably you have miss or input wrong data. Make sure on correct format of date in yyyy-mm-gg and select a patient in the system.</string>
    <string name="search_hint">Research patient...</string>
    <string name="personaggi_sbloccati">Unlock characters</string>
    <string name="personaggi_acquistabili">Purchasable characters</string>
    <string name="valutaInsufficiente">You do not have enough money to unlock this character!</string>
    <string name="acquistoPersonaggioTitle">Character Purchase</string>
    <string name="acquistoPersonaggioDescription">Are you sure you want to buy and unlock this character?</string>
    <string name="risultatoEsercizio">Result exercize</string>
    <string name="terapia">Therapy</string>
</resources>